# Projeto_ml

./: README.md
projeto-ml01/: app.py  pyproject.toml  testes.ipynb
